# selecta

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  answers.md  api-contract.md  cloudbuild.yaml  context-dump.md  deploy-cloud-run.sh  entrypoint.sh  frontend.sh  my_agent_data.db  nl2sql_join_relationship_aspect_type_v4.yaml  package-lock.json  pyproject.toml  requirements.txt  roadmap.md  selecta-3col-layout.html  selecta-ui-mockup.html
backend/: .env.example  README.md  __init__.py  api-contract.md  app.py  context-dump.md  my_agent_data.db  pyproject.toml  utils.py
backend/app/: __init__.py  agent.py
backend/selecta/: __init__.py  agent.py  config_loader.py  custom_tools.py  instructions.yaml  markdown_parser.py  utils.py  visualization.py
backend/tests/: test_custom_tools.py  test_markdown_parser.py
data_agent/: __init__.py  agent.py  constants.py  custom_tools.py  instructions.py  instructions.yaml  utils.py
docker/: start.sh
docs/deployment/: cloud-run.md
frontend/: README.md  STREAMING_NOTES.md  next.config.ts  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
scripts/: deploy.sh  init.sh
selecta/: __init__.py  agent.py  config_loader.py  constants.py  custom_tools.py  instructions.py  instructions.yaml  markdown_parser.py  storage.py  visualization.py
selecta-modernized/: package.json
selecta-modernized/app/: globals.css  layout.tsx  page.tsx
selecta-modernized/lib/: api.ts  store.ts  utils.ts
selecta/datasets/: thelook.yaml
service/: __init__.py  api.py
(+56 files in other folders)
